    findbugs warnings. (Sean Busbey via aw)

    HADOOP-11894. Bump the version of Apache HTrace to 3.2.0-incubating
    (Masatake Iwasaki via Colin P. McCabe)

    HADOOP-12043. Display warning if defaultFs is not set when running fs
    commands. (Lei Xu via wang)

    HADOOP-12037. Fix wrong classname in example configuration of hadoop-auth
    documentation. (Masatake Iwasaki via wang)

  OPTIMIZATIONS

    HADOOP-11785. Reduce the number of listStatus operation in distcp
    buildListing (Zoran Dimitrijevic via Colin P. McCabe)

    HADOOP-11812. Implement listLocatedStatus for ViewFileSystem to speed up
    split calculation (gera)

    HADOOP-11970. Replace uses of ThreadLocal<Random> with JDK7
    ThreadLocalRandom.  (Sean Busbey via Colin P. McCabe)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-11242. Record the time of calling in tracing span of
    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

  BUG FIXES

    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-10027. *Compressor_deflateBytesDirect passes instance instead of
    jclass to GetStaticObjectField. (Hui Zheng via cnauroth)

    HADOOP-11724. DistCp throws NPE when the target directory is root.
    (Lei Eddy Xu via Yongjun Zhang) 

    HADOOP-11760. Fix typo of javadoc in DistCp. (Brahma Reddy Battula via
    ozawa).

    HADOOP-11800. Clean up some test methods in TestCodec.java.
    (Brahma Reddy Battula via aajisaka)

    HADOOP-11811. Fix typos in hadoop-project/pom.xml and TestAccessControlList.
    (Brahma Reddy Battula via ozawa)

    HADOOP-11704. DelegationTokenAuthenticationFilter must pass ipaddress
    instead of hostname to ProxyUsers#authorize (Anubhav Dhoot via asuresh)
